<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffdddddd" >

    <LinearLayout
        android:id="@+id/biggest_linear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/tournament"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/insert_name"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/number"
                android:textSize="22sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/point"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/insert_point"
                android:inputType="number"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/parity"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/parity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/insert_parity"
                android:inputType="number"
                android:textSize="20sp" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textSize="22sp"
                android:paddingTop="5dp" />

            <Spinner
                android:id="@+id/match_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <Button
                android:id="@+id/first_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_pressed"
                android:onClick="nameTeams"
                android:text="@string/confirm"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>